# HyperVane

./: .gitignore  CUSTOM_PLATFORM_INTROS.md  EMULATION.md  PS3_BOOTUP_SEQUENCE.md  README.md  SHADPS4.md  flake.nix  package-lock.json  package.json  shell.nix  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml
ROMULUS/: Cargo.toml  ROM_SEARCH_DB_DOWNLOAD_ENGINE.md  config.yaml  pyproject.toml  reference_catalog.db  romulus_catalog.db
ROMULUS/.claude/: settings.local.json
ROMULUS/catalog_builder/: build_catalog.py  download_dats.py
ROMULUS/enrichment/: enrichment.py
ROMULUS/matcher/: Cargo.toml
ROMULUS/matcher/src/: db.rs  main.rs  models.rs
ROMULUS/romulus/: __init__.py  __main__.py  browser.py  catalog.py  config.py  downloader.py  main.py  organizer.py
ROMULUS/romulus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ROMULUS/romulus/sources/: __init__.py  base.py  page_parser.py  pspkg.py  romsfun.py
ROMULUS/scanner/: Cargo.toml
ROMULUS/scanner/src/: disc.rs  hasher.rs  main.rs  walker.rs
ROMULUS/schema/: reference_catalog.sql  user_library.sql
ROMULUS/tests/: test_catalog.py  test_page_parser.py
ROMULUS/tests/fixtures/: detail_pages.py
app/: globals.css  layout.tsx  page.tsx
app/components/: FilterPanel.tsx  Header.tsx  RomCard.tsx  SearchBar.tsx
assets/: hypervane.desktop
assets/themes/: dark.hyprplex  light.hyprplex
proto/: hypervane.proto
scraper/: SCRAPER.md  config.yaml  pyproject.toml  requirements.txt  shell.nix
scraper/.claude/: settings.local.json
scraper/gamelists/: gameslist (ps1).csv  gameslist (ps2).csv  gameslist (ps3).csv  gameslist (ps4).csv  gameslist[PS5].csv  gameslist[PSP].csv
scraper/scraper/: browser.py  main.py  organizer.py  pipeline.py
scraper/scraper/matchers/: hash.py  title.py
scraper/scraper/sources/: base.py  gameart.py  page_parser.py  romsfun.py
scraper/tests/: test_matchers.py  test_page_parser.py  test_platforms.py
scraper/tests/fixtures/: detail_page.py
scripts/: build_all.sh  cuda_stub.c  dev_setup.sh  gen_test_video.sh  mock_rom_server.py  mock_server.py  mock_social_server.py  run_dev.sh
src/connectors/: go.mod  hypervane.pb.go  main.go
src/connectors/connector/: connector.go
src/connectors/emulators/: dolphin.go  duckstation.go  retroarch.go
src/connectors/ipc/: server.go
src/connectors/process/: manager.go
src/db_engine/: Cargo.toml  build.rs
src/db_engine/src/: lib.rs  main.rs
src/db_engine/src/db/: mod.rs  schema.rs  wal.rs
src/db_engine/src/hash/: crc32.rs  mod.rs  sha1.rs
src/db_engine/src/ipc/: server.rs
src/db_engine/src/search/: fts.rs  fuzzy.rs  mod.rs
src/previewer/: ffmpeg_pipeline.py
src/scraper/: hypervane_pb2.py  main.py  pyproject.toml  requirements.txt  youtube_search.py
src/scraper/ipc/: socket_client.py
src/scraper/previewer/: ffmpeg_pipeline.py
src/scraper/scraper/: api_fallback.py  rate_limiter.py  rom_id.py  ytdlp_worker.py
src/scraper/sources/: base.py
src/scraper/yt_gameplay_search/: __init__.py
src/scraper/yt_load/: __init__.py
src/ui/: AccountWidget.cpp  AccountWidget.h  CMakeLists.txt  main.cpp  stylesheet.qss
src/ui/include/: AccountManager.h  ControllerInput.h  ControllerWizard.h  CoreManager.h  EmulatorCoreConfig.h  GameArtLoader.h  GameDetailDialog.h  GameGridDelegate.h  IPCClient.h  InGameMenu.h  IntroOverlay.h  LibraryView.h  LoginDialog.h  MainWindow.h  PreviewPlayer.h  RegisterDialog.h  RomDownloader.h  RomHasher.h  RomInfo.h  SocoliteActivityFeed.h  SocoliteAvatarEditor.h  SocoliteCanvas.h  SocoliteChat.h  SocoliteEngine.h  SocoliteFriendsList.h  SocoliteTypes.h  SocoliteUserSearch.h  ThemeEngine.h  UISoundManager.h  VirtualKeyboard.h
src/ui/resources/: resources.qrc
src/ui/resources/themes/: dark.qss
src/ui/src/: AccountManager.cpp  ControllerInput.cpp  ControllerWizard.cpp  CoreManager.cpp  EmulatorCoreConfig.cpp  GameArtLoader.cpp  GameDetailDialog.cpp  GameGridDelegate.cpp  IPCClient.cpp  InGameMenu.cpp  IntroOverlay.cpp  LibraryView.cpp  LoginDialog.cpp  MainWindow.cpp  PreviewPlayer.cpp  RegisterDialog.cpp  RomDownloader.cpp  RomHasher.cpp  SocoliteActivityFeed.cpp  SocoliteAvatarEditor.cpp  SocoliteCanvas.cpp  SocoliteChat.cpp  SocoliteEngine.cpp  SocoliteFriendsList.cpp  SocoliteUserSearch.cpp  ThemeEngine.cpp  UISoundManager.cpp  VirtualKeyboard.cpp
