[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hypervane-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.6",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.scripts]
hypervane-scraper = "scraper.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
