[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matcher"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
