[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
walkdir = "2"
rayon = "1"
sha1 = { version = "0.10", features = ["oid"] }
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
digest = "0.10"
