[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hypervane-scraper-daemon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.1",
]

[project.scripts]
yt-load = "yt_load:main"
yt-gameplay-search = "yt_gameplay_search:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "yt_load*",
    "yt_gameplay_search*",
    "scraper*",
    "previewer*",
    "ipc*",
]
